Moved all outputs to a single folder

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -37,6 +37,13 @@
             "justMyCode": false
         },
         {
+            "name": "Temperature 2023",
+            "type": "python",
+            "request": "launch",
+            "program": "${workspaceFolder}/examples/temperature_2023.py",
+            "justMyCode": false
+        },
+        {
             "name": "Train graph",
             "type": "python",
             "request": "launch",
