--- a/.github/workflows/code_quality.yaml
+++ b/.github/workflows/code_quality.yaml
@@ -22,5 +22,5 @@ jobs:
           pip install black==22.3.0 pylint==2.13.5
       - name: Checking code quality
         run: |
-          black --line-length 100 --target-version py37 --diff --check $(git ls-files '*.py')
+          black --line-length 100 --target-version py37 --diff --check .
           PYTHONPATH=. pylint --argument-rgx='[a-z_][a-z0-9_]{1,30}$|[xyzUVW]' --attr-rgx='[a-z_][a-z0-9_]{1,30}$' --variable-rgx='[a-z_A][a-z0-9_]{0,30}|[UVWXYZ]$' --disable=missing-docstring --disable=too-few-public-methods --disable=duplicate-code --notes='FIXME,XXX,###' --max-args=8 --max-attributes=16 --max-public-methods=32 --max-locals=24 --max-attributes=16 --generated-members=torch.* conmech/
