--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -2,13 +2,6 @@
     "version": "0.2.0",
     "configurations": [
         {
-            "name": "Draft examples 3D",
-            "type": "python",
-            "request": "launch",
-            "program": "${workspaceFolder}/examples/draft_examples.py",
-            "justMyCode": false
-        },
-        {
             "name": "Examples 2D",
             "type": "python",
             "request": "launch",
@@ -41,6 +34,20 @@
             "type": "python",
             "request": "launch",
             "program": "${workspaceFolder}/examples/temperature_2023.py",
+            "justMyCode": false
+        },
+        {
+            "name": "Compare examples 3D",
+            "type": "python",
+            "request": "launch",
+            "program": "${workspaceFolder}/examples/draft_compare.py",
+            "justMyCode": false
+        },
+        {
+            "name": "Draft examples 3D",
+            "type": "python",
+            "request": "launch",
+            "program": "${workspaceFolder}/examples/draft_examples.py",
             "justMyCode": false
         },
         {
