--- a/requirements-deep.txt
+++ b/requirements-deep.txt
@@ -1,16 +1,13 @@
 # deep conmech
-psutil==5.9.0
-
 flax==0.6.0
+orbax-checkpoint==0.2.0
 
-torch==1.11
-torch-geometric==2.2.0
-torch-scatter==2.1.0
-torch-sparse==0.6.15
-torch-cluster==1.6.0
-torch-spline-conv==1.2.1
+torch==2.0.1
+torch-geometric==2.3.1
 
-tensorflow==2.10.0
+tensorflow==2.12.0
 
-tensorboard==2.10.0
-netron #==6.3.7
+multiprocess==0.70.14
+tensorboard==2.12.3
+netron==6.9.5
+# jupyter==1.0.0
