--- a/.github/workflows/conmech_container_tests.yml
+++ b/.github/workflows/conmech_container_tests.yml
@@ -2,9 +2,9 @@ name: Conmech Container Tests
 
 on:
   push:
-    branches: [ master ]
+    branches: [ main ]
   pull_request:
-    branches: [ master ]
+    branches: [ main ]
 
 jobs:
   run_tests:
