--- a/.github/workflows/conmech_tests.yml
+++ b/.github/workflows/conmech_tests.yml
@@ -14,8 +14,8 @@ jobs:
   run_tests:
     strategy:
       matrix:
-        platform: [ ubuntu-latest, macos-latest, windows-latest ]
-        python-version: [ 3.7, 3.8, 3.9 ]
+        platform: [ ubuntu-latest ] #, macos-latest, windows-latest ]
+        python-version: [ 3.10 ] #3.7, 3.8, 3.9 ]
     runs-on: ${{ matrix.platform }}
     steps:
       - uses: actions/checkout@v2
@@ -27,11 +27,11 @@ jobs:
       - run: python -m pip install --upgrade pip
       - run: pip install pytest pytest-env pytest-xdist
 
-      - if: matrix.platform == 'windows-latest'
-        run: pip install "jax[cpu]===0.3.22" -f https://whls.blob.core.windows.net/unstable/index.html --use-deprecated legacy-resolver
+      # - if: matrix.platform == 'windows-latest'
+      #   run: pip install "jax[cpu]===0.3.22" -f https://whls.blob.core.windows.net/unstable/index.html --use-deprecated legacy-resolver
       
-      - if: matrix.platform != 'windows-latest'
-        run: pip install jaxlib==0.3.22
+      # - if: matrix.platform != 'windows-latest'
+      #   run: pip install jaxlib==0.3.22
 
       - run: pip install -r requirements.txt
 
