--- a/.github/workflows/deep_conmech_tests.yml
+++ b/.github/workflows/deep_conmech_tests.yml
@@ -22,8 +22,8 @@ jobs:
       - name: Install requirements
         shell: bash
         run: |
-          pip install pytest pytest-env pytest-xdist
           pip install -r requirements.txt
+          pip install -r requirements-deep.txt
       - name: Running tests
         shell: bash
         run: PYTHONPATH=. pytest tests/test_deep_conmech -p no:unraisableexception
