Updated armadillo example and dockerfile

--- a/.github/workflows/conmech_container_tests.yml
+++ b/.github/workflows/conmech_container_tests.yml
@@ -10,19 +10,20 @@ jobs:
   run_tests:
     runs-on: ubuntu-latest
     container:
-      image: michaljur/conmech:latest
+      image: michaljur/conmech3d:latest
     steps:
       - name: Downloading code
         shell: bash
+        # git init
+        # url=${{ github.repositoryUrl }}
+        # git remote add origin ${url/git:/https:}
         run: |
-          git init
-          url=${{ github.repositoryUrl }}
-          git remote add origin ${url/git:/https:}
           git pull origin ${{ github.sha }}
-      - name: Install requirements
-        shell: bash
-        run: |
-          pip install -r requirements.txt
+      # - name: Install requirements
+      #   shell: bash
+      #   run: |
+      #     pip install -r requirements.txt
       - name: Running tests
         shell: bash
-        run: PYTHONPATH=. pytest --ignore=tests/test_deep_conmech -p no:unraisableexception -s
+        # PYTHONPATH=.
+        run: pytest --ignore=tests/test_deep_conmech -p no:unraisableexception -s --verbose
