--- a/.github/workflows/conmech_container_tests.yml
+++ b/.github/workflows/conmech_container_tests.yml
@@ -14,16 +14,12 @@ jobs:
     steps:
       - name: Downloading code
         shell: bash
-        # git init
-        # url=${{ github.repositoryUrl }}
-        # git remote add origin ${url/git:/https:}
+          rm -rf *
+          git init
+          url=${{ github.repositoryUrl }}
+          git remote add origin ${url/git:/https:}
         run: |
           git pull origin ${{ github.sha }}
-      # - name: Install requirements
-      #   shell: bash
-      #   run: |
-      #     pip install -r requirements.txt
       - name: Running tests
         shell: bash
-        # PYTHONPATH=.
         run: pytest --ignore=tests/test_deep_conmech -p no:unraisableexception -s --verbose
