WIP: Tests and dockerfiles (added dockerfile_gpu)

--- a/.dockerignore
+++ b/.dockerignore
@@ -1,3 +1,22 @@
-**/.git
-output/*
+.git
+.*
+
+log/*
 datasets/*
+output**/*
+build/*
+
+.pytest_cache/
+.ipynb_checkpoints
+cython_modules/*.html
+
+*.ipynb
+*.c
+*.so
+
+*.mp4
+*.jpeg
+*.jpg
+*.png
+*.pdf
+*.pt
