--- a/.github/workflows/simulation_environment_tests.yml
+++ b/.github/workflows/simulation_environment_tests.yml
@@ -1,4 +1,4 @@
-name: Conmech Tests
+name: Tests of simulatios in environment
 
 defaults:
   run:
@@ -15,7 +15,7 @@ jobs:
     strategy:
       matrix:
         platform: [ ubuntu-latest ] #, macos-latest, windows-latest ]
-        python-version: [ '3.10' ] #3.7, 3.8, 3.9 ]
+        python-version: [ '3.11', '3.10', '3.9' ]
     runs-on: ${{ matrix.platform }}
     steps:
       - uses: actions/checkout@v3
@@ -25,7 +25,6 @@ jobs:
           python-version: ${{ matrix.python-version }}
 
       - run: python -m pip install --upgrade pip
-      - run: pip install pytest pytest-env pytest-xdist
 
       # - if: matrix.platform == 'windows-latest'
       #   run: pip install "jax[cpu]===0.3.22" -f https://whls.blob.core.windows.net/unstable/index.html --use-deprecated legacy-resolver
