--- a/.gitignore
+++ b/.gitignore
@@ -1,24 +1,14 @@
-#flax/*
-
-# VSCode
-#.vscode/*
-#.isort.cfg
-
 # PyCharm
 .idea/*
-
-*.tfrecord
-*.pkl
-meta/*
 
 # conmech input/output
 log/*
 datasets/*
-blender/output/*
 output**/*
 build/*
 cython_modules/*.html
 
+*.ipynb
 *.c
 
 *.mp4
@@ -26,10 +16,13 @@ cython_modules/*.html
 *.jpg
 *.png
 *.pdf
-*.pt
-*.txt
 
 events.*
+
+*.pt
+*.tfrecord
+*.pkl
+meta/*
 
 # Byte-compiled / optimized / DLL files
 __pycache__/
