--- a/requirements-deep.txt
+++ b/requirements-deep.txt
@@ -1,5 +1,6 @@
-# deep conmech
-torch
+# --find-links https://download.pytorch.org/whl/cpu
+torch #==2.0.1
+
 flax==0.6.10
 orbax-checkpoint==0.2.5
 
@@ -10,4 +11,3 @@ tensorflow==2.12.0
 multiprocess==0.70.14
 tensorboard==2.12.3
 netron==6.9.5
-# jupyter==1.0.0
