--- a/.github/workflows/simulation_environment_tests.yml
+++ b/.github/workflows/simulation_environment_tests.yml
@@ -15,7 +15,7 @@ jobs:
     strategy:
       matrix:
         platform: [ ubuntu-latest ] #, macos-latest, windows-latest ]
-        python-version: [ '3.11', '3.10', '3.9' ]
+        python-version: [ '3.10' ]
     runs-on: ${{ matrix.platform }}
     steps:
       - uses: actions/checkout@v3
