--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,7 @@
 {
     "python.formatting.blackArgs": [
-        "--line-length=100",
-        "--target-version=py37"
+        // "--line-length=100",
+        // "--target-version=py37"
     ],
     // Pylint
     "python.linting.pylintArgs": [
