--- a/.env
+++ b/.env
@@ -2,8 +2,7 @@ PYTHONPATH=.
 
 # JAX_ENABLE_X64=1
 # XLA_PYTHON_CLIENT_PREALLOCATE=0
-# CUDA_VISIBLE_DEVICES=0
-# CUDA_VISIBLE_DEVICES=-1
+# CUDA_VISIBLE_DEVICES=1 #-1
 # JAX_PLATFORM_NAME=cpu
 # JAX_DISABLE_JIT=1
 # JAX_DEBUG_NANS=1
